examples/test/testpolicy3574.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3574
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key9: value43
      key2: value48
      key7: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value24
      podSelector:
        matchLabels:
          key10: value0
          key36: value21
          key13: value46
